--- a/k.html
+++ b/k.html
@@ -319,7 +319,8 @@ document.addEventListener("DOMContentLoaded", function() {
 </script>
   
 <footer>
-  <p>© 2025 adjustment-lab |<br> Design & Concept by H. Nishimoto</p>
+  <p>© 2025 adjustment-lab |<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Design & Concept by H. Nishimoto</p>
 </footer>
 
 </body>
