--- a/k.html
+++ b/k.html
@@ -317,8 +317,9 @@ document.addEventListener("DOMContentLoaded", function() {
 </script>
   
 <footer>
-  <p>© 2025 adjustment-lab |<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Design & Concept by H. Nishimoto</p>
+ 
+  <pre>© 2025 adjustment-lab |<br>
+                     Design & Concept by H. Nishimoto</pre>
 </footer>
 
 </body>
