--- a/f.html
+++ b/f.html
@@ -247,9 +247,9 @@ document.addEventListener("DOMContentLoaded", function(){
 </script>
 
 <footer>
-  <p>© 2025 adjustment-lab |<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Design & Concept by H. Nishimoto</p>
-</footer>
+  
+  <pre>© 2025 adjustment-lab |<br>
+                     Design & Concept by H. Nishimoto</pre></footer>
 
 </body>
 </html>
