--- a/f.html
+++ b/f.html
@@ -204,7 +204,7 @@
   <h3>⑤ デッドバグ＋ブリージング</h3>
   <p><strong>目的：</strong><br> 体幹安定と呼吸制御。<br><br>
      <strong>フォーム：</strong><br> 仰向けで脚・腕を90°で反対側を伸ばす。<br>腰を浮かせず呼吸。<br><br>
-     <strong>キュー：</strong><br> 「腰を床に押し付け、息で体を安定させる」。</p
+     <strong>キュー：</strong><br> 「腰を床に押し付け、息で体を安定させる」。</p>
 </section>
 
 <section id="coach-note">
