--- a/f.html
+++ b/f.html
@@ -61,7 +61,9 @@
   transition:background 0.3s;
   -webkit-tap-highlight-color:transparent;
 }
-.feedback-summary:hover{background:#3a2f0f;}
+..feedback-summary:hover {
+  background: #334b66;
+}
 .feedback-summary .catch{
   font-size:1.1rem;
   color:#fde68a;
