--- a/k.html
+++ b/k.html
@@ -122,7 +122,7 @@ th, td {
   transition: background 0.3s;
 }
 .feedback-summary:hover {
-  background: #2a3b52;
+  background: #334b66;
 }
 .feedback-summary .catch {
   font-size: 1.1rem;
