--- a/k.html
+++ b/k.html
@@ -311,7 +311,7 @@ document.addEventListener("DOMContentLoaded", function() {
   const password = prompt("パスワードを入力してください：");
  if (!password || password !== "12yk") {
   alert("パスワードが違います。");
-  window.location.href = "index.html";
+  window.location.replace = "index.html";
 }
 });
 </script>
