--- a/f.html
+++ b/f.html
@@ -243,7 +243,7 @@ document.addEventListener("DOMContentLoaded", function(){
   const password = prompt("パスワードを入力してください：");
   if (!password || password !== "14rf") {
     alert("パスワードが違います。");
-    window.location.replace = "index.html";
+   window.location.replace("index.html");  
   }
 });
 </script>
