--- a/t.html
+++ b/t.html
@@ -148,7 +148,7 @@
   <div id="feedback-detail" class="feedback-detail">
     <h3>良い特徴</h3>
     <p>・体の感じ方に繊細さがあり、動きの“質”を感じ取れる感性がある。<br><br>
-       ・リズムとテンポの取り方がうまく、形で覚えるのではなく感覚で掴むタイプ。<<br>
+       ・リズムとテンポの取り方がうまく、形で覚えるのではなく感覚で掴むタイプ。<br>
        ・ボールの回転や軌道に対する感受性が高く、復帰後の精度型投手としての伸びしろは十分。</p><br>
 
     <h3>課題</h3>
@@ -233,7 +233,7 @@ document.addEventListener("DOMContentLoaded", function(){
   const password = prompt("パスワードを入力してください：");
   if (!password || password !== "19yt") {
     alert("パスワードが違います。");
-    window.location.href = "index.html";
+   window.location.replace("index.html");
   }
 });
 </script>  
