--- a/index.html
+++ b/index.html
@@ -903,14 +903,11 @@ if ('serviceWorker' in navigator) {
 <p><strong>誤り例：</strong> 肩で引く・骨盤が回る・呼吸を止める。</p>
 </div></div>
 
-
-
 <!-- ==================== フッター・スクリプト ==================== -->
 <footer>
-  <pre>© 2025 adjustment-lab |<br>
-                     Design & Concept by H. Nishimoto</pre>
+  <pre>© 2025 adjustment-lab |<br>Design & Concept by H. Nishimoto</pre>
 </footer>
-
+  
 <script>
 function openModal(id){document.getElementById(id).style.display='block';}
 function closeModal(id){document.getElementById(id).style.display='none';}
