--- a/k.html
+++ b/k.html
@@ -318,10 +318,8 @@ window.location.replace("index.html");
 </script>
   
 <footer>
- 
-  <pre>© 2025 adjustment-lab |<br>
-                     Design & Concept by H. Nishimoto</pre>
+  <pre>© 2025 adjustment-lab |<br>Design & Concept by H. Nishimoto</pre>
 </footer>
-
+  
 </body>
 </html>
