--- a/t.html
+++ b/t.html
@@ -239,9 +239,8 @@ document.addEventListener("DOMContentLoaded", function(){
 </script>  
 
 <footer>
+  <pre>© 2025 adjustment-lab |<br>Design & Concept by H. Nishimoto</pre>
+</footer>
   
-  <pre>© 2025 adjustment-lab |<br>
-                     Design & Concept by H. Nishimoto</pre></footer>
-
 </body>
 </html>
