--- a/index.html
+++ b/index.html
@@ -903,10 +903,27 @@ if ('serviceWorker' in navigator) {
 <p><strong>誤り例：</strong> 肩で引く・骨盤が回る・呼吸を止める。</p>
 </div></div>
 
-<!-- ==================== フッター・スクリプト ==================== -->
 <footer>
-  <pre>© 2025 adjustment-lab |<br>Design & Concept by H. Nishimoto</pre>
+  <p class="footer-text">© 2025 adjustment-lab |<br>Design & Concept by H. Nishimoto</p>
 </footer>
+
+<style>
+footer {
+  text-align: center;
+  margin-top: 60px;
+  color: #9ca3af;
+  font-size: 0.85rem;
+  line-height: 1.6;
+  word-break: keep-all;
+}
+
+.footer-text {
+  display: inline-block;
+  text-align: center;
+  white-space: normal; /* スマホでの折返し許可 */
+  margin: 0 auto;
+}
+</style>
   
 <script>
 function openModal(id){document.getElementById(id).style.display='block';}
