--- a/index.html
+++ b/index.html
@@ -385,7 +385,7 @@ if ('serviceWorker' in navigator) {
 </div>
 
 <p style="margin-top:10px; color:#9ca3af; line-height:1.8;">
-※RPE（自覚的運動強度）は自身の体感を基準に設定。<br>
+※RPE（自覚的運動強度）は自身の体感疲労度。<br>
 どの環境（a〜e）でも<strong>同等の生理・動作効果</strong>を得られるよう設計されています。<br>
 天候や施設条件に応じて自由に選択しても、効果の偏りはありません。<br><br>
 推奨順位：① 屋外（a）／② 自走式TM（d）／③ 屋内（b）／④ 電動TM（c）／⑤ サーキット（e）<br><br>
