--- a/index.html
+++ b/index.html
@@ -685,7 +685,6 @@ if ('serviceWorker' in navigator) {
 5. 背骨の軸上で、肋骨だけが滑るように動く感覚を意識。</p>
 <p><strong>ポイント：</strong> 「肋骨がねじれる」のではなく、「肋骨が回る」。<br>
 下半身と肩甲帯の完全固定が前提。</p>
-<p><strong>強度：</strong> 各方向10回×2set／RPE5〜6。</p>
 <p><strong>誤り例：</strong> 肩を回す・骨盤が動く・胸で呼吸する。</p>
 </div></div>
 
@@ -700,7 +699,6 @@ if ('serviceWorker' in navigator) {
 3. 吐気で骨盤を安定させ、シャフトを胸の前まで下ろす。<br>
 4. 呼吸ごとに「吸って立ち上がる → 吐いて安定させる」を繰り返す。</p>
 <p><strong>ポイント：</strong> 肩で上げず、肋骨の動きで棒を持ち上げる感覚をつかむ。</p>
-<p><strong>強度：</strong> 30秒×3set／RPE6。</p>
 <p><strong>誤り例：</strong> 腕で引き上げる・腰を反る・呼吸を止める。</p>
 </div></div>
 
@@ -724,7 +722,7 @@ if ('serviceWorker' in navigator) {
 <p><strong>目的：</strong> 呼吸と出力を瞬時に切り替える能力を高める。</p>
 <p><strong>方法概要：</strong> ジャンプ、スクワット、スプリントリズムなどを3種目連続で実施。  
 <button onclick="openModal('e-power-detail')">詳細解説を見る</button></p>
-<p><strong>強度：</strong> 各種目20秒×3set／RPE8／HR160前後。</p>
+<p><strong>強度：</strong> 各種目45秒×3set／RPE8／HR160前後。</p>
 <p><strong>誤り例：</strong> 反動で跳ねる・呼吸を止める・テンポが乱れる。</p>
 </div></div>
 
@@ -735,10 +733,10 @@ if ('serviceWorker' in navigator) {
 <p><strong>目的：</strong> 呼吸で出力をコントロールし、瞬時の切り替えと動作リズムを教育する。</p>
 
 <p><strong>構成：</strong><br>
-① スクワット・リズム（20秒）<br>
-② ジャンプ・テンポ（20秒）<br>
-③ スプリント・リズム（20秒）<br>
-この3種目を連続で行い、1setを1分とする。合計3set（セット間休息60〜90秒）。</p>
+① スクワット・リズム（45秒）<br>
+② ジャンプ・テンポ（45秒）<br>
+③ スプリント・リズム（45秒）<br>
+この3種目を連続で行い、1setを約2.5分とする。合計3set（セット間休息60〜90秒）。</p>
 
 <p><strong>方法：</strong><br>
 1. <em>スクワット・リズム：</em> 吐気で押し上げ、吸気で降下。テンポは「吐く＝出力、吸う＝姿勢」。<br>
@@ -746,7 +744,7 @@ if ('serviceWorker' in navigator) {
 3. <em>スプリント・リズム：</em> 3〜5歩の短距離反応で、吐気で加速・吸気で姿勢を再セット。骨盤主導を意識。<br><br>
 各種目を「止まらずにリズムで繋ぐ」ことが最大の狙い。</p>
 
-<p><strong>強度：</strong> 各種目20秒×3種目×3set（計約9分）／RPE8／HR160前後。</p>
+<p><strong>強度：</strong> 各種目45秒×3種目×3set（計約15分）／RPE8／HR160前後。</p>
 <p><strong>誤り例：</strong> 反動で跳ねる・呼吸を止める・テンポが乱れる・フォームが硬直する。</p>
 </div></div>
 
