--- a/index.html
+++ b/index.html
@@ -757,7 +757,7 @@ if ('serviceWorker' in navigator) {
 ① ニーリングリブターン <button onclick="openModal('e-rib1')">解説</button><br>
 ② スプリットローテーション <button onclick="openModal('e-rib2')">解説</button><br>
 ③ ツイストクランチ <button onclick="openModal('e-rib3')">解説</button><br>
-④ プランクローテーション <button onclick="openModal('e-rib4')">解説</button><br>
+④ ハイプランクローテーション <button onclick="openModal('e-rib4')">解説</button><br>
 ⑤ スティック・ローテーションリーチ <button onclick="openModal('e-rib5')">解説</button></p>
 <p><strong>総強度：</strong> 各6〜8分×3set（計約25分）／RPE7。</p>
 <p><strong>誤り例：</strong> 骨盤が回る・肩で回す・呼吸を止める。</p>
